# teknofest_isas_yavuz_tema2

./: README.md  create_packages.sh  setup.sh  yavuz_mission.py
src/yavuz_bringup/: CMakeLists.txt  package.xml
src/yavuz_bringup/config/: mission_params.yaml
src/yavuz_bringup/launch/: simulation.launch.py
src/yavuz_control/: package.xml  setup.py
src/yavuz_control/yavuz_control/: pid.py  thruster_allocator.py
src/yavuz_description/: CMakeLists.txt  package.xml
src/yavuz_description/config/: gz_bridge.yaml
src/yavuz_description/urdf/: yavuz_auv.urdf.xacro
src/yavuz_localization/: package.xml  setup.py
src/yavuz_localization/yavuz_localization/: pose_estimator.py
src/yavuz_navigation/: package.xml  setup.py
src/yavuz_navigation/yavuz_navigation/: mission_state_machine.py  pose_bridge.py  trajectory_logger.py
src/yavuz_simulation/: CMakeLists.txt  package.xml
src/yavuz_simulation/worlds/: teknofest_theme2.sdf
