<?xml version="1.0"?>
<package format="3">
  <name>yavuz_navigation</name>
  <version>1.0.0</version>
  <description>YAVUZ AUV otonom navigasyon ve görev yürütücüsü</description>
  <maintainer email="l2316501412@ogr.sdu.edu.tr">Ahmet Kaan BAŞKAN</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>yavuz_control</depend>
  <export><build_type>ament_python</build_type></export>
</package>
